<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/adImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:background="#E0E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adImageView">


        <TextView
            android:id="@+id/nrOfCans_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/nr_of_cans_text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            app:layout_constraintTop_toBottomOf="@+id/id_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/phoneNr_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/phone_number_text"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/nrOfCans_text" />

            <Button
                android:id="@+id/call_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="callPhoneNumber"
                android:text="@string/ring_text"
                app:backgroundTint="#535252" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/address_text"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/address_text"
                android:textAppearance="@android:style/TextAppearance.Medium"
                app:layout_constraintTop_toBottomOf="@+id/phoneNr_text" />

            <Button
                android:id="@+id/findLocation_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="findLocation"
                android:text="@string/hitta_hit_text"
                app:backgroundTint="#535252" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>